[package]
name = "common"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1.0"
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
log                 = "0.4.0"
env_logger          = "0.8.4"
chrono              = "0.4"
log4rs              = { git = "https://github.com/yakov-bakhmatov/log4rs", branch = "async-rotation" }
lazy_static         = "1.4.0"
reqwest =  { version = "0.11" , features = ["multipart","native-tls"] }
tokio = { version = "1.16" , features = ["full"] }
