[package]
name = "common"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1.0"
anyhow = "1.0"
async-trait = "0.1"
serde = { version = "1.0", features = ["derive"] }
log                 = "0.4.0"
env_logger          = "0.8.4"
chrono              = "0.4"
log4rs              = { git = "https://github.com/yakov-bakhmatov/log4rs", branch = "async-rotation" }
lazy_static         = "1.4.0"
reqwest =  { version = "0.11" , features = ["multipart","native-tls"] }
tokio = { version = "1.16" , features = ["full"] }
futures = "0.3"
uuid = { version = "1.1", features = ["v4"] }
thiserror = "1.0"
dotenv = "0.15"
regex = "1.5"
bytesize = "1.1"
wrap_wrk = {path="../wrap_wrk"}
