[package]
name = "scheduler"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
common = {path = "../common"}
serde_json = "1.0"
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
minifier = "0.0.42"
clap = "3.0"
reqwest =  { version = "0.11" , features = ["multipart","native-tls"] }
tokio = { version = "1.16" , features = ["full"] }
futures-util = "0.3"
timer = "0.2"
chrono = "0.4"
futures = "0.3"
log = { version = "0.4", features = ["std"] }
handlebars = "4.2"
warp = "0.3"
slog = "2.7"
lazy_static = "1.4"
strum_macros = "0.24"
strum = "0.24"
local-ip-address = "0.4"
dotenv = "0.15"