[package]
name = "scheduler"
version = "0.1.0"
edition = "2021"
build = "../build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
common = {path = "../common"}
entity = {path = "../entity"}
migration = {path = "../migration"}
diesel          = { version = "1.4.7", features = ["postgres", "serde_json", "numeric", "r2d2", "chrono", "uuidv07"] }
diesel-derive-enum  = { version = "1.1", features = ["postgres"] }
diesel_migrations   = "1.4.0"
serde_json = "1.0"
anyhow = "1.0"
async-trait = "0.1.56"
serde = { version = "1.0", features = ["derive"] }
clap = "3.0"
reqwest =  { version = "0.11" , features = ["multipart","native-tls"] }
tokio = { version = "1.16" , features = ["full"] }
futures-util = "0.3"
timer = "0.2"
chrono = "0.4"
futures = "0.3"
log = { version = "0.4", features = ["std"] }
handlebars = "4.3"
warp = "0.3"
slog = "2.7"
lazy_static = "1.4"
strum_macros = "0.24"
strum = "0.24"
local-ip-address = "0.4"
dotenv = "0.15"
uuid = "1.1.0"
sea-orm = {version = "0.8.0", features = [ "sqlx-postgres", "runtime-tokio-native-tls", "macros"]}
histogram = "0.6.9"
rand = "0.8.5"

[dev-dependencies]
sea-orm = {version = "0.8.0", features = [ "mock" ]}
test_util = {path = "../test_util"}
pretty_assertions = "0.7"
httpmock = "0.6"
itertools = "0.10"
serde_derive = "1.0"

[build-dependencies]
chrono = "0.4"